@@ -16,6 +16,7 @@ EAPI int ECORE_IMF_EVENT_DELETE_SURROUNDING = 0;
 
 int _ecore_imf_log_dom = -1;
 static int _ecore_imf_init_count = 0;
+extern Ecore_IMF_Context *show_req_ctx;
 
 EAPI int
 ecore_imf_init(void)
@@ -51,4 +52,19 @@ ecore_imf_shutdown(void)
    _ecore_imf_log_dom = -1;
    ecore_shutdown();
    return _ecore_imf_init_count;
+}
+
+EAPI Eina_Bool
+ecore_imf_input_panel_hide(void)
+{
+   if (show_req_ctx)
+     {
+        if (ecore_imf_context_input_panel_state_get(show_req_ctx) != ECORE_IMF_INPUT_PANEL_STATE_HIDE)
+          {
+             ecore_imf_context_input_panel_hide(show_req_ctx);
+             return EINA_TRUE;
+          }
+     }
+
+   return EINA_FALSE;
 }
