@@ -90,7 +90,9 @@ Additions:
     * Ecore:
      - notify systemd that we are ready as soon as the main loop is running.
      - automatically support Watchdog.
-    * ecore_imf: Add ecore_imf_context_input_panel_layout_variation_set/get API
+    * ecore_imf: 
+     - Add ecore_imf_context_input_panel_layout_variation_set/get API
+     - Add ecore_imf_input_panel_hide API
     * Add edje_object_part_text_input_panel_layout_variation_set/get API
     * Evil:
      - Add mkdtemp.
