@@ -1,3 +1,7 @@
+2013-04-13  Jihoon Kim
+
+        * Ecore_IMF: Add ecore_imf_input_panel_hide () API
+
 2013-04-10  Rafael Antognolli
 
         * Ecore: Add support for double and triple click on Wayland.
